@@ -1,5 +1,10 @@
 2009-12-17  Ivan Maidanski <ivmai@mail.ru>
 
+	* build-linux-x86-jcgo.sh: New executable file.
+	* build-win32-x86-jcgo.bat: Update a message.
+
+2009-12-17  Ivan Maidanski <ivmai@mail.ru>
+
 	* build-win32-x86-jcgo.bat: New file.
 
 2009-12-16  Ivan Maidanski <ivmai@mail.ru>
